--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- header -->
 
 <header class="header ">
-  <div class = "logo">Hello</div>
+  <div class = "logo"></div>
   <div class="overlay"></div>
    <div class="container">
    	  <div class="description ">
