--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script type= "text/javascript">var submitted = false;</script>
     <script type="text/javascript">function setSubmitted() {submitted = true; return true;}</script>
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-  onload="if(submitted) {window.location='http://google.com';}"></iframe>
+  onload="if(submitted) {window.location='https://crimsonpreptutors.com';}"></iframe>
 		<form target="hidden_iframe" method="POST" onsubmit="return setSubmitted(); " action= "https://docs.google.com/forms/u/0/d/e/1FAIpQLSf7nL9zPkeTOX-1GX16cBBiIiqObEKxgGlY0yvZyTi3aIwSog/formResponse">
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12">
