--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       </ul>
 		<form action= "https://docs.google.com/forms/d/e/1FAIpQLSdeIKXqM5NP4BAXZ4BRsCtP4Mc-jJAUQ7UuJK_lUAc3qDrZfQ/viewform">
-  			<button type="submit" class="btn btn-outline-secondary btn-lg">Interest Form</button>
+  			<button type="submit" class="btn btn-outline-secondary btn-lg">Sign Up</button>
 		</form>
   	</h1>
   </div>
